		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/931373 (administrative data search)
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1240166 (bug on groups search)
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1091580 (accountinfo checkboxes)
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1152596 (vm relation to host)



2.1RC1
		* active SNMP V3
		* change info on processor on coputer details
		* add pda info on computer details
		* fix bug on accountinfo (with uploadfile>64ko)
		* add advanced options for teledeploy
		* change ocs logo
		* add wake on lan on computer
		* add wake on lan on multi search
		* Remove Support 
		* add SNMP field to scan multi networks
		* Add QRcode on accountinfo
		* Add architecture field
		* fix bug on softwares detail on computer
		* sort categories on dictionary
2.0.6
		* fix security vulnerability => Cross site request forgery
		* fix utf8 problem
		* add link on dico ignore
		* fix bug on menu (http://forums.ocsinventory-ng.org/viewtopic.php?pid=49125)
		* fix bug on export data on all_soft
		* add oscomment field on tab

2.0.5
		* Add logs directory on sql files
		* fix Warning on function_config_generale.php for PHP 5.4. 
		* fix security bug https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/963229
		* fix security bug https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/963017
		* fix bug on package's group - Tx to FactorFx.
		* fix cas library - use system library
		* fix warning on natcasesort function. tx to Remi for this patch
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/940370 (redistribution group)

2.0.4 
		* fix a part of this bug https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/907755 (show computers name on csv export)
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/918085
		* fix bug on menu by profil
		* on deployment statistics, merge EXIT_CODE_% with ERROR.