@@ -263,13 +263,13 @@ $sql_field=array("OCS_REPORT_WORKGROUP"=>array('ARG'=>array('count(distinct work
 	
 function define_tab($data_on=array()){
 	global $l;
-	$data_on['ACTIVITY']=$l->g(798);
-	$data_on['SOFT']=mb_strtoupper($l->g(20));
-	$data_on['HARD']=$l->g(799);
-	$data_on['ELSE']=$l->g(800);
+	$data_on['ACTIVITY']=mb_strtoupper($l->g(798), 'UTF-8');
+	$data_on['SOFT']=mb_strtoupper($l->g(20), 'UTF-8');
+	$data_on['HARD']=mb_strtoupper($l->g(799), 'UTF-8');
+	$data_on['ELSE']=mb_strtoupper($l->g(800), 'UTF-8');
 	if( $_SESSION['OCS']['CONFIGURATION']['CONSOLE']=="YES") {
 		//$data_on['ADMIN']['CONFIG']=mb_strtoupper($l->g(107));
-		$data_on['ADMIN']['MSG']=mb_strtoupper($l->g(915));
+		$data_on['ADMIN']['MSG']=mb_strtoupper($l->g(915), 'UTF-8');
 	
 		if (!isset($default))
 			$default = 'MSG';
